css/style.css
.jumbotron {
  background-color: #fff;
}

.lead span {
  color: #3aad05;
}

h1 {
  color: #666;
}

.bg-blue {
  background-color: #0087be;
}

.navbar-brand small {
  opacity: .5;
}

.post-meta {
  margin-top: 3rem;
  color: #6c757d;
}

.post-meta::before {
  content: "\2014 \00A0";
}

ul.list-special {
  list-style: none;
}

ul.list-special li:before {
  opacity: .3;
  margin-right: 10px;
}

ul.arrow-bullet li:before {
  content: "\279c";
}

